Fix issue Compliance: the images are overflowing the page

--- a/static/css/section/_management.scss
+++ b/static/css/section/_management.scss
@@ -355,12 +355,12 @@ body.management-ema-whitepaper {
 		}
 		img.flush-right {
 			float: right;
-			margin-right: -40px;
+			margin-right: -20px;
 			margin-left: 20px;
 		}
 		img.flush-left {
 			float: left;
-			margin-left: -40px;
+			margin-left: -20px;
 		}
 	}
 	
